2025-10-02T00:49:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18179918557 # 784
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-02
* notice: last 14d: unq all: 5 16
* notice: prev accum: outdated-unq outdated-all / unq all: 936 1415 / 953 1432
* notice: next accum: outdated-unq outdated-all / unq all: 937 1416 / 954 1433
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-17] / [2025-09-18 2025-10-01]

2025-10-01T00:56:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18147750026 # 783
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-01
* notice: last 14d: unq all: 7 17
* notice: prev accum: outdated-unq outdated-all / unq all: 936 1415 / 952 1431
* notice: next accum: outdated-unq outdated-all / unq all: 936 1415 / 953 1432
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-30]

2025-09-30T00:51:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18115054347 # 782
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-30
* notice: last 14d: unq all: 7 16
* notice: prev accum: outdated-unq outdated-all / unq all: 935 1414 / 951 1430
* notice: next accum: outdated-unq outdated-all / unq all: 936 1415 / 952 1431
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-16] / [2025-09-29]

2025-09-29T00:52:24Z: