@@ -1,17 +1,7 @@
 {
-  "count": 16,
-  "uniques": 5,
+  "count": 15,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2025-09-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-09-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-20T00:00:00Z",
       "count": 2,
@@ -69,6 +59,11 @@
     },
     {
       "timestamp": "2025-10-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
